--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -76,7 +76,7 @@ jobs:
         
     - name: Create docs directory if it doesn't exist
       run: mkdir -p docs
-      
+
     - name: Download release assets for appcast generation
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -89,7 +89,7 @@ jobs:
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/releases | \
         jq -r '.[] | select(.draft == false and .prerelease == false) | .assets[] | select(.name | endswith(".zip")) | "\(.browser_download_url) \(.name)"' | \
-        head -10 | \ # Limit to last 10 releases
+        head -10 | \
         while read url filename; do
           echo "Downloading $filename from $url"
           curl -L -o "releases_temp/$filename" "$url"
