--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -96,15 +96,9 @@ jobs:
         done
         
     - name: Generate appcast
-      env:
-        SPARKLE_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY_BASE64 }}
       run: |
-        # Create private key file - decode from base64
-        echo "$SPARKLE_PRIVATE_KEY" | base64 -D > private_key.pem
-        
-        # Generate appcast from the downloaded releases
+        # Generate appcast from the downloaded releases using key from Keychain
         ./bin/generate_appcast \
-          --ed-key-file private_key.pem \
           --download-url-prefix "https://github.com/${{ github.repository }}/releases/download/" \
           --release-notes-url-prefix "https://github.com/${{ github.repository }}/releases/tag/" \
           releases_temp/
@@ -120,8 +114,6 @@ jobs:
         # Move the generated appcast to docs folder
         mv appcast.xml docs/appcast.xml
         
-        # Clean up
-        rm private_key.pem
         rm -rf releases_temp
         
     - name: Commit and push appcast
