--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -88,7 +88,7 @@ jobs:
         curl -H "Authorization: token $GITHUB_TOKEN" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/releases | \
-        jq -r '.[] | select(.draft == false and .prerelease == false) | .assets[] | select(.name | endswith(".zip")) | "\(.browser_download_url) \(.name)"' | \
+        jq -r '.[] | select(.draft == false and .prerelease == false) | .assets[] | select(.name | endswith(".dmg")) | "\(.browser_download_url) \(.name)"' | \
         head -10 | \
         while read url filename; do
           echo "Downloading $filename from $url"
