find appcast file

--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -102,17 +102,27 @@ jobs:
           --download-url-prefix "https://github.com/${{ github.repository }}/releases/download/" \
           --release-notes-url-prefix "https://github.com/${{ github.repository }}/releases/tag/" \
           releases_temp/
-          
+        
+        # Find where appcast.xml was created
+        APPCAST_FILE=$(find . -name "appcast.xml" -type f -print -quit)
+        
+        if [ -z "$APPCAST_FILE" ]; then
+          echo "Error: appcast.xml was not found"
+          exit 1
+        else
+          echo "Found appcast.xml at: $APPCAST_FILE"
+        fi
+        
         # Ensure correct version info in the appcast.xml
         if [[ -n "$VERSION" && -n "$BUILD_NUMBER" ]]; then
           # Fix version in the appcast
-          sed -i '' "s|<title>Version .*</title>|<title>Version $VERSION</title>|g" appcast.xml
-          sed -i '' "s|<sparkle:version>.*</sparkle:version>|<sparkle:version>$BUILD_NUMBER</sparkle:version>|g" appcast.xml
-          sed -i '' "s|<sparkle:shortVersionString>.*</sparkle:shortVersionString>|<sparkle:shortVersionString>$VERSION</sparkle:shortVersionString>|g" appcast.xml
+          sed -i '' "s|<title>Version .*</title>|<title>Version $VERSION</title>|g" "$APPCAST_FILE"
+          sed -i '' "s|<sparkle:version>.*</sparkle:version>|<sparkle:version>$BUILD_NUMBER</sparkle:version>|g" "$APPCAST_FILE"
+          sed -i '' "s|<sparkle:shortVersionString>.*</sparkle:shortVersionString>|<sparkle:shortVersionString>$VERSION</sparkle:shortVersionString>|g" "$APPCAST_FILE"
         fi
         
         # Move the generated appcast to docs folder
-        mv appcast.xml docs/appcast.xml
+        mv "$APPCAST_FILE" docs/appcast.xml
         
         rm -rf releases_temp
         
