fix version sed statement

--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -97,6 +97,9 @@ jobs:
 
     - name: Generate appcast
       run: |
+        # Output for debugging
+        echo "Current VERSION: ${VERSION}"
+        
         # Generate appcast from the downloaded releases using key from Keychain
         ./bin/generate_appcast \
           --download-url-prefix "https://github.com/${{ github.repository }}/releases/download/" \
@@ -104,11 +107,15 @@ jobs:
           releases_temp/
         
         # Ensure correct version info in the appcast.xml
-        if [[ -n "$VERSION" && -n "$BUILD_NUMBER" ]]; then
-          # Fix version in the appcast
-          sed -i '' "s|<title>Version .*</title>|<title>Version $VERSION</title>|g" releases_temp/appcast.xml
-          sed -i '' "s|<sparkle:version>.*</sparkle:version>|<sparkle:version>$BUILD_NUMBER</sparkle:version>|g" releases_temp/appcast.xml
-          sed -i '' "s|<sparkle:shortVersionString>.*</sparkle:shortVersionString>|<sparkle:shortVersionString>$VERSION</sparkle:shortVersionString>|g" releases_temp/appcast.xml
+        if [[ -n "${VERSION}" && -n "${BUILD_NUMBER}" ]]; then
+          # Fix version in the appcast - use curly braces for variables
+          sed -i '' "s|<title>Version .*</title>|<title>Version ${VERSION}</title>|g" releases_temp/appcast.xml
+          sed -i '' "s|<sparkle:version>.*</sparkle:version>|<sparkle:version>${BUILD_NUMBER}</sparkle:version>|g" releases_temp/appcast.xml
+          sed -i '' "s|<sparkle:shortVersionString>.*</sparkle:shortVersionString>|<sparkle:shortVersionString>${VERSION}</sparkle:shortVersionString>|g" releases_temp/appcast.xml
+          
+          # Verify the replacement worked
+          echo "Version in appcast after replacement:"
+          grep -A1 "<title>" releases_temp/appcast.xml
         fi
         
         # Move the generated appcast to docs folder
