--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -26,15 +26,14 @@ jobs:
         mkdir -p docs
         mkdir -p releases
         
-    - name: Download recent release assets
+    - name: Download only latest release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         curl -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/releases | \
-        jq -r '.[] | select(.draft == false and .prerelease == false) | .assets[] | select(.name | endswith(".dmg")) | "\(.browser_download_url) \(.name)"' | \
-        head -3 | \
+            https://api.github.com/repos/${{ github.repository }}/releases/latest | \
+        jq -r '.assets[] | select(.name | endswith(".dmg")) | "\(.browser_download_url) \(.name)"' | \
         while read url filename; do
           echo "Downloading $filename"
           curl -L -o "releases/$filename" "$url"
