--- a/.github/workflows/update-appcast.yml
+++ b/.github/workflows/update-appcast.yml
@@ -56,6 +56,7 @@ jobs:
         title: "Update appcast"
         body: "Automated appcast update"
         branch: update-appcast-${{ github.run_id }}
+        base: main
         delete-branch: true
         add-paths: |
           docs/appcast.xml
